Adding MySQL connection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,12 @@ include_directories(include)
 # Archivos fuente
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
+# Detectar si estás en macOS
+if(APPLE)
+    include_directories(/opt/homebrew/opt/mariadb-connector-c/include/mariadb)
+    link_directories(/opt/homebrew/opt/mariadb-connector-c/lib)
+endif()
+
 # Ejecutable principal
 add_executable(wolfbear main.cpp ${SOURCES})
+target_link_libraries(wolfbear mysqlclient)
